infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 #tells how many pods to create
  selector:
    matchLabels: # labels for the pods which this deployment has to take care of
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: hb/posts:0.0.1
