infra/k8s/posts-old.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: hb/posts:0.0.1
