infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1 # tells how many pods to create
  selector:
    matchLabels: # labels for the pods which this deployment has to take care of
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: hb111/comment
          imagePullPolicy: Never

---
# cluster Ip service for post service
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
